--- a/app/src/main/res/layout/fragment_coming.xml
+++ b/app/src/main/res/layout/fragment_coming.xml
@@ -3,11 +3,11 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".BlankFragment">
-
+    tools:context=".ComingFragment">
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/movie_list"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
+
 </FrameLayout>
