--- a/app/src/main/res/layout/movie_list_view.xml
+++ b/app/src/main/res/layout/movie_list_view.xml
@@ -34,6 +34,15 @@
                 app:layout_constraintTop_toTopOf="parent" />
 
             <TextView
+                android:id="@+id/run_time"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="run time"
+                android:layout_margin="5dp"
+                app:layout_constraintBottom_toTopOf="@+id/movie_tag"
+                app:layout_constraintEnd_toEndOf="parent" />
+
+            <TextView
                 android:id="@+id/movie_eng_name"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -70,8 +79,8 @@
                 android:id="@+id/movie_come_out_day"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="2022/01/01"
                 android:padding="5dp"
+                android:text="2022/01/01"
                 android:textSize="14dp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="@+id/movie_tag"
